# fscl-xdata-c

./: meson.build  meson_options.txt  readme.md
.github/workflows/: ci_host_builder.yml  ci_host_tester.yaml  ci_meson_builder.yml
code/include/fossil/: xdata.h  xstructures.h
code/include/fossil/xdata/: dlist.h  dqueue.h  flist.h  map.h  pqueue.h  queue.h  set.h  stack.h  tofu.h  tree.h  vector.h
code/include/fossil/xstructures/: dlist.h  dqueue.h  flist.h  map.h  pqueue.h  queue.h  set.h  stack.h  tree.h  vector.h
code/include/trilobite/: xdata.h
code/include/trilobite/xdata/: dlist.h  dqueue.h  flist.h  map.h  pqueue.h  queue.h  set.h  stack.h  tofu.h  tree.h  vector.h
code/source/: dlist.c  dqueue.c  flist.c  map.c  meson.build  pqueue.c  queue.c  set.c  stack.c  tofu.c  tree.c  vector.c
demo/: demo_array.c  demo_dict.c  demo_dlist.c  demo_dqueue.c  demo_flist.c  demo_graph.c  demo_hash.c  demo_map.c  demo_matrix.c  demo_pqueue.c  demo_queue.c  demo_set.c  demo_stack.c  demo_tlist.c  demo_tofu.c  demo_tree.c  demo_tuple.c  demo_vector.c  meson.build
include/trilobite/: package.h  xdata.h
include/trilobite/xdata/: array.h  dict.h  dlist.h  dqueue.h  flist.h  graph.h  hash.h  map.h  matrix.h  pqueue.h  queue.h  set.h  stack.h  tlist.h  tofu.h  tree.h  tuple.h  vector.h
src/: array.c  dict.c  dlist.c  dqueue.c  flist.c  graph.c  hash.c  map.c  matrix.c  meson.build  package.c  pqueue.c  queue.c  set.c  stack.c  tlist.c  tofu.c  tree.c  tuple.c  vector.c
subprojects/: fscl-xmock-c.wrap  fscl-xtofu-c.wrap  trilo-xmock-c.wrap  trilo-xtest-c.wrap  tscl-xmock-c.wrap
test/: meson.build  test_cases.c  xtest_array.c  xtest_dict.c  xtest_dlist.c  xtest_dqueue.c  xtest_flist.c  xtest_graph.c  xtest_hash.c  xtest_map.c  xtest_matrix.c  xtest_pqueue.c  xtest_queue.c  xtest_set.c  xtest_stack.c  xtest_tlist.c  xtest_tofu.c  xtest_tree.c  xtest_tuple.c  xtest_vector.c  xunit_runner.c
wrapfile/: trilo-xdata-c.wrap
